--- a/templates/edit.html
+++ b/templates/edit.html
@@ -19,6 +19,22 @@
 
         <a href="{{ url_for('home') }}" class="back-link">Cancel</a>
     </div>
+    <script>
+    const toggleBtn = document.getElementById("theme-toggle");
 
+    if (localStorage.getItem("theme") === "dark") {
+        document.body.classList.add("dark");
+    }
+
+    toggleBtn.addEventListener("click", () => {
+        document.body.classList.toggle("dark");
+
+        if (document.body.classList.contains("dark")) {
+            localStorage.setItem("theme", "dark");
+        } else {
+            localStorage.setItem("theme", "light");
+        }
+    });
+    </script>
 </body>
 </html>
